# telemetry_dev

./: .gitignore  CMakeLists.txt  TODO.md  external.cmake  test.sh
src/: defines.h  defines.h.in  mainwindow.cpp  mainwindow.h  mainwindow.ui  mxzmq.cpp  mxzmq.h
src/main/: main.cpp  pub.cpp  sub.cpp
